5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1601_820.log
== TEST (2019-04-15 16:24:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR =int(input("Qual o valor do saque?:"))

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:24:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR =int(input("Qual o valor do saque?:"))

# Quantidade de notas de R$ 50
valor // 50 = notas

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 11
    resto_R$50 = valor % 50
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:25:59) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR =int(input("Qual o valor do saque?:"))

# Quantidade de notas de R$ 50
valor // 50 = notas

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto// 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 20
    notas_R$2 = resto_R$10 // 2
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:26:16) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR =int(input("Qual o valor do saque?:"))

# Quantidade de notas de R$ 50
valor // 50 = notas

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto// 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 22
    print(int(notas_R$50))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:26:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR =int(input("Qual o valor do saque?:"))

# Quantidade de notas de R$ 50
valor // 50 = notas

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto// 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas))
print(int(notas10))
print(int(notas2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:27:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR =int(input("Qual o valor do saque?:"))

# Quantidade de notas de R$ 50
VALOR// 50 = notas

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto// 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas))
print(int(notas10))
print(int(notas2))

-- ERROR:
File "XXXX", line 8
    VALOR// 50 = notas
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:27:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR =int(input("Qual o valor do saque?:"))

# Quantidade de notas de R$ 50
VALOR // 50 = notas50

# Valor restante a ser sacado com notas menores que R$ 50
= valor % 50

# Quantidade de notas de R$ 10
notas10 = resto// 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas))
print(int(notas10))
print(int(notas2))

-- ERROR:
File "XXXX", line 11
    = valor % 50
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:27:38) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR =int(input("Qual o valor do saque?:"))

# Quantidade de notas de R$ 50
VALOR // 50 = notas50

# Valor restante a ser sacado com notas menores que R$ 50
notas50= valor % 50

# Quantidade de notas de R$ 10
notas10 = resto// 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas))
print(int(notas10))
print(int(notas2))

-- ERROR:
File "XXXX", line 8
    VALOR // 50 = notas50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:27:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR =int(input("Qual o valor do saque?:"))

# Quantidade de notas de R$ 50
VALOR /50 = notas50

# Valor restante a ser sacado com notas menores que R$ 50
notas50= valor % 50

# Quantidade de notas de R$ 10
notas10 = resto// 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas))
print(int(notas10))
print(int(notas2))

-- ERROR:
File "XXXX", line 8
    VALOR /50 = notas50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:28:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR =int(input("Qual o valor do saque?:"))

# Quantidade de notas de R$ 50
VALOR /50 

# Valor restante a ser sacado com notas menores que R$ 50
notas50= valor % 50

# Quantidade de notas de R$ 10
notas10 = resto// 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas))
print(int(notas10))
print(int(notas2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    notas50= valor % 50
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:28:55) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR =int(input("Qual o valor do saque?:"))

# Quantidade de notas de R$ 50
VALOR /50 

# Valor restante a ser sacado com notas menores que R$ 50
notas50= VALOR % 50

# Quantidade de notas de R$ 10
notas10 = resto// 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas))
print(int(notas10))
print(int(notas2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    notas10 = resto// 10
NameError: name 'resto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
